--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container header">
-        <div class="logo">Q</div>
+        <div class="logo">M</div>
         <div class="">
             <h1 class="text-primary">Macrogine</h1>
             <p class="text-secondary">Defining your value on the Internet</p>
